added baseline lstm performance

--- a/1-timeframe.ipynb
+++ b/1-timeframe.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sathi\\AppData\\Local\\Temp\\ipykernel_2500\\1101762970.py:2: DtypeWarning: Columns (1,3,38,46) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\sathi\\AppData\\Local\\Temp\\ipykernel_7760\\1101762970.py:2: DtypeWarning: Columns (1,3,38,46) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(\"D:\\Project Phase II\\Dataset\\cleaneddataset.csv\",encoding='cp1252')\n"
      ]
     }
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,8 @@
       "2160\n",
       "1516\n",
       "Number of nodes and edges in overall graph: \n",
-      "2271\n"
+      "2271\n",
+      "1585\n"
      ]
     }
    ],
@@ -514,7 +515,8 @@
     "print(nx.number_of_nodes(nonattackG_1_4_1_3_1_2_1_1))\n",
     "print(nx.number_of_edges(nonattackG_1_4_1_3_1_2_1_1))\n",
     "print(\"Number of nodes and edges in overall graph: \")\n",
-    "print(nx.number_of_nodes(overallG_1_4_1_3_1_2_1_1))"
+    "print(nx.number_of_nodes(overallG_1_4_1_3_1_2_1_1))\n",
+    "print(nx.number_of_edges(overallG_1_4_1_3_1_2_1_1))"
    ]
   },
   {
