--- a/neuralnets.ipynb
+++ b/neuralnets.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,17 +65,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\sathi\\AppData\\Local\\Temp\\ipykernel_1776\\2025491202.py:1: DtypeWarning: Columns (46) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  train = pd.read_csv(r'D:\\Project Phase II\\Dataset\\finaltrain.csv',encoding='cp1252')\n",
+      "C:\\Users\\sathi\\AppData\\Local\\Temp\\ipykernel_1776\\2025491202.py:2: DtypeWarning: Columns (46) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  test = pd.read_csv(r'D:\\Project Phase II\\Dataset\\finaltest.csv',encoding='cp1252')\n"
+     ]
+    }
+   ],
    "source": [
-    "train = pd.read_csv(r'D:\\Project Phase II\\Dataset\\train.csv',encoding='cp1252')\n",
-    "test = pd.read_csv(r'D:\\Project Phase II\\Dataset\\test.csv',encoding='cp1252')"
+    "train = pd.read_csv(r'D:\\Project Phase II\\Dataset\\finaltrain.csv',encoding='cp1252')\n",
+    "test = pd.read_csv(r'D:\\Project Phase II\\Dataset\\finaltest.csv',encoding='cp1252')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2615,6 +2626,164 @@
     "        print(f'Accuracy: {accuracy}')\n",
     "\n",
     "evaluate_model(model, X_test_tensor, y_test_tensor, adj_matrix)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Gemini trial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "import tf_geometric as tfg\n",
+    "\n",
+    "class GATConv(tfg.layers.GAT):\n",
+    "  def __init__(self, units, num_heads, activation=tf.nn.relu, **kwargs):\n",
+    "    super(GATConv, self).__init__(units=units, num_heads=num_heads, activation=activation, **kwargs)\n",
+    "\n",
+    "    def call(self, inputs, training=None):\n",
+    "        x, edge_index = inputs\n",
+    "        # Apply GAT layer with learnable weights\n",
+    "        attention_weights = self.att(x, x)\n",
+    "        # Message passing with attention weights\n",
+    "        output = self._propagate(edge_index, x=x, attention_weights=attention_weights)\n",
+    "        output = self.combine(output, training=training)\n",
+    "        return output\n",
+    "\n",
+    "\n",
+    "class EdgeClassifier(tf.keras.Model):\n",
+    "  def __init__(self, input_dim, hidden_dim, output_dim, num_heads=4):\n",
+    "    super(EdgeClassifier, self).__init__()\n",
+    "    self.gat1 = GATConv(hidden_dim, num_heads)  # Initialize GAT layers\n",
+    "    self.gat2 = GATConv(output_dim, num_heads)\n",
+    "    self.fc = tf.keras.layers.Dense(output_dim, activation=\"softmax\")\n",
+    "\n",
+    "\n",
+    "  def call(self, inputs, training=None):\n",
+    "        x = inputs['x']\n",
+    "        edge_index = inputs['edge_index']\n",
+    "        edge_features = inputs['edge_features']\n",
+    "        num_nodes = tf.shape(x)[0]\n",
+    "        num_edges = tf.shape(edge_index)[0]\n",
+    "        # self_loops = tf.expand_dims(tf.range(num_nodes, dtype=tf.int32), axis=1)\n",
+    "        # self_loops = tf.tile(self_loops, [num_edges, 1])\n",
+    "        # print(\"self loop shape: \",self_loops.shape)\n",
+    "        print(\"edge index shape\",edge_index.shape)\n",
+    "        \n",
+    "        # combined_edge_index = tf.concat([edge_index, self_loops], axis=0)  # Add self-loops\n",
+    "        x = self.gat1([x, edge_index], training=training)\n",
+    "        x = self.gat2([x, edge_index], training=training)\n",
+    "        # Pass features through GAT layers\n",
+    "        # x = self.gat1([x, combined_edge_index], training=training)\n",
+    "        # x = self.gat2([x, combined_edge_index], training=training)\n",
+    "        # No need to split features for single node feature\n",
+    "        # Extract edge features directly\n",
+    "        combined_features = tf.concat([x, edge_features], axis=1)  # Concatenate with edge features\n",
+    "        # Edge classification prediction\n",
+    "        output = self.fc(combined_features)\n",
+    "        return output\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Assuming you have loaded your training data (replace with your logic)\n",
+    "train_data = []\n",
+    "\n",
+    "# Example graph 1\n",
+    "node_features = np.array([[0.2], [0.5], [0.8],[0.2]])  # Features for 3 nodes #List of nodes and their features i.e. just IP and port\n",
+    "\n",
+    "# Edge features i.e. without srcip, sport, dstip, dsport\n",
+    "edge_features = np.array([[0.1, 0.3, 0.7, 1],  # Class 0\n",
+    "                          [0.4, 0.2, 0.9, 0],  # Class 1\n",
+    "                          [0.6, 0.8, 0.5, 1],  # Class 0\n",
+    "                          [0.9, 0.1, 0.2, 0],\n",
+    "                          [0, 0, 0, 0],\n",
+    "                          [0, 0, 0, 0],\n",
+    "                          [0, 0, 0, 0],\n",
+    "                          [0, 0, 0, 0]])  # Class 1 (last element: class indicator) #Repeat [0, 0, 0, 0] to denote self loop\n",
+    "\n",
+    "#For each entry in edge_features, this denotes which (source node, destination node) it belongs to\n",
+    "edge_index = np.array([[0, 1], [1, 2], [2, 0], [0, 2],[0, 0], [1, 1], [2, 2], [3, 3]])  # Edge indices (source, destination)\n",
+    "\n",
+    "graph_data = {\"x\": node_features, \"edge_index\": edge_index, \"edge_features\": edge_features, \"y\": edge_features[:, -1]}\n",
+    "train_data.append(graph_data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "edge index shape (8, 2)\n"
+     ]
+    },
+    {
+     "ename": "InvalidArgumentError",
+     "evalue": "Exception encountered when calling layer 'gat_conv_14' (type GATConv).\n\n{{function_node __wrapped__ConcatV2_N_2_device_/job:localhost/replica:0/task:0/device:CPU:0}} ConcatOp : Dimension 0 in both shapes must be equal: shape[0] = [8,2] vs. shape[1] = [2,4] [Op:ConcatV2] name: concat\n\nCall arguments received by layer 'gat_conv_14' (type GATConv):\n  • inputs=['tf.Tensor(shape=(4, 1), dtype=float32)', 'tf.Tensor(shape=(8, 2), dtype=int32)']\n  • training=True\n  • mask=None",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mInvalidArgumentError\u001b[0m                      Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[18], line 21\u001b[0m\n\u001b[0;32m     18\u001b[0m   y \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mreshape(graph_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124my\u001b[39m\u001b[38;5;124m'\u001b[39m], (\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m,))\n\u001b[0;32m     20\u001b[0m   \u001b[38;5;66;03m# Pass the reshaped tensors to the model\u001b[39;00m\n\u001b[1;32m---> 21\u001b[0m   predictions \u001b[38;5;241m=\u001b[39m model({\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mx\u001b[39m\u001b[38;5;124m'\u001b[39m: x, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124medge_index\u001b[39m\u001b[38;5;124m'\u001b[39m: edge_index, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124medge_features\u001b[39m\u001b[38;5;124m'\u001b[39m: edge_features, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124my\u001b[39m\u001b[38;5;124m'\u001b[39m: y}, \u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m     22\u001b[0m   loss \u001b[38;5;241m=\u001b[39m loss_fn(y, predictions)\n\u001b[0;32m     24\u001b[0m gradients \u001b[38;5;241m=\u001b[39m tape\u001b[38;5;241m.\u001b[39mgradient(loss, model\u001b[38;5;241m.\u001b[39mtrainable_variables)\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\keras\\src\\utils\\traceback_utils.py:70\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     67\u001b[0m     filtered_tb \u001b[38;5;241m=\u001b[39m _process_traceback_frames(e\u001b[38;5;241m.\u001b[39m__traceback__)\n\u001b[0;32m     68\u001b[0m     \u001b[38;5;66;03m# To get the full stack trace, call:\u001b[39;00m\n\u001b[0;32m     69\u001b[0m     \u001b[38;5;66;03m# `tf.debugging.disable_traceback_filtering()`\u001b[39;00m\n\u001b[1;32m---> 70\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\u001b[38;5;241m.\u001b[39mwith_traceback(filtered_tb) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m     71\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[0;32m     72\u001b[0m     \u001b[38;5;28;01mdel\u001b[39;00m filtered_tb\n",
+      "Cell \u001b[1;32mIn[17], line 37\u001b[0m, in \u001b[0;36mEdgeClassifier.call\u001b[1;34m(self, inputs, training)\u001b[0m\n\u001b[0;32m     35\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124medge index shape\u001b[39m\u001b[38;5;124m\"\u001b[39m,edge_index\u001b[38;5;241m.\u001b[39mshape)\n\u001b[0;32m     36\u001b[0m \u001b[38;5;66;03m# combined_edge_index = tf.concat([edge_index, self_loops], axis=0)  # Add self-loops\u001b[39;00m\n\u001b[1;32m---> 37\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgat1([x, edge_index], training\u001b[38;5;241m=\u001b[39mtraining)\n\u001b[0;32m     38\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgat2([x, edge_index], training\u001b[38;5;241m=\u001b[39mtraining)\n\u001b[0;32m     39\u001b[0m \u001b[38;5;66;03m# Pass features through GAT layers\u001b[39;00m\n\u001b[0;32m     40\u001b[0m \u001b[38;5;66;03m# x = self.gat1([x, combined_edge_index], training=training)\u001b[39;00m\n\u001b[0;32m     41\u001b[0m \u001b[38;5;66;03m# x = self.gat2([x, combined_edge_index], training=training)\u001b[39;00m\n\u001b[0;32m     42\u001b[0m \u001b[38;5;66;03m# No need to split features for single node feature\u001b[39;00m\n\u001b[0;32m     43\u001b[0m \u001b[38;5;66;03m# Extract edge features directly\u001b[39;00m\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\tf_geometric\\layers\\conv\\gat.py:89\u001b[0m, in \u001b[0;36mGAT.call\u001b[1;34m(self, inputs, training, mask)\u001b[0m\n\u001b[0;32m     81\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m     82\u001b[0m \n\u001b[0;32m     83\u001b[0m \u001b[38;5;124;03m:param inputs: List of graph info: [x, edge_index] or [x, edge_index, edge_weight].\u001b[39;00m\n\u001b[0;32m     84\u001b[0m \u001b[38;5;124;03m    Note that the edge_weight will not be used.\u001b[39;00m\n\u001b[0;32m     85\u001b[0m \u001b[38;5;124;03m:return: Updated node features (x), shape: [num_nodes, units]\u001b[39;00m\n\u001b[0;32m     86\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m     87\u001b[0m x, edge_index \u001b[38;5;241m=\u001b[39m inputs[\u001b[38;5;241m0\u001b[39m], inputs[\u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m---> 89\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m gat(x, edge_index,\n\u001b[0;32m     90\u001b[0m            \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mquery_kernel, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mquery_bias, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mquery_activation,\n\u001b[0;32m     91\u001b[0m            \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mkey_kernel, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mkey_bias, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mkey_activation,\n\u001b[0;32m     92\u001b[0m            \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mkernel, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbias, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mactivation,\n\u001b[0;32m     93\u001b[0m            num_heads\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnum_heads,\n\u001b[0;32m     94\u001b[0m            split_value_heads\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msplit_value_heads,\n\u001b[0;32m     95\u001b[0m            edge_drop_rate\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39medge_drop_rate,\n\u001b[0;32m     96\u001b[0m            training\u001b[38;5;241m=\u001b[39mtraining)\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\tf_geometric\\nn\\conv\\gat.py:43\u001b[0m, in \u001b[0;36mgat\u001b[1;34m(x, edge_index, query_kernel, query_bias, query_activation, key_kernel, key_bias, key_activation, kernel, bias, activation, num_heads, split_value_heads, edge_drop_rate, training)\u001b[0m\n\u001b[0;32m     40\u001b[0m num_nodes \u001b[38;5;241m=\u001b[39m tfs\u001b[38;5;241m.\u001b[39mshape(x)[\u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m     42\u001b[0m \u001b[38;5;66;03m# self-attention\u001b[39;00m\n\u001b[1;32m---> 43\u001b[0m edge_index, edge_weight \u001b[38;5;241m=\u001b[39m add_self_loop_edge(edge_index, num_nodes)\n\u001b[0;32m     45\u001b[0m row, col \u001b[38;5;241m=\u001b[39m edge_index[\u001b[38;5;241m0\u001b[39m], edge_index[\u001b[38;5;241m1\u001b[39m]\n\u001b[0;32m     47\u001b[0m x_is_sparse \u001b[38;5;241m=\u001b[39m \u001b[38;5;28misinstance\u001b[39m(x, tf\u001b[38;5;241m.\u001b[39msparse\u001b[38;5;241m.\u001b[39mSparseTensor)\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\tf_geometric\\utils\\graph_utils.py:352\u001b[0m, in \u001b[0;36madd_self_loop_edge\u001b[1;34m(edge_index, num_nodes, edge_weight, fill_weight)\u001b[0m\n\u001b[0;32m    350\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21madd_self_loop_edge\u001b[39m(edge_index, num_nodes, edge_weight\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, fill_weight\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1.0\u001b[39m):\n\u001b[0;32m    351\u001b[0m     diagnal_edge_index \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mstack([tf\u001b[38;5;241m.\u001b[39mrange(num_nodes, dtype\u001b[38;5;241m=\u001b[39mtf\u001b[38;5;241m.\u001b[39mint32)] \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m2\u001b[39m, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m--> 352\u001b[0m     updated_edge_index \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mconcat([edge_index, diagnal_edge_index], axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m    354\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m tf\u001b[38;5;241m.\u001b[39mis_tensor(edge_index):\n\u001b[0;32m    355\u001b[0m         updated_edge_index \u001b[38;5;241m=\u001b[39m updated_edge_index\u001b[38;5;241m.\u001b[39mnumpy()\n",
+      "\u001b[1;31mInvalidArgumentError\u001b[0m: Exception encountered when calling layer 'gat_conv_14' (type GATConv).\n\n{{function_node __wrapped__ConcatV2_N_2_device_/job:localhost/replica:0/task:0/device:CPU:0}} ConcatOp : Dimension 0 in both shapes must be equal: shape[0] = [8,2] vs. shape[1] = [2,4] [Op:ConcatV2] name: concat\n\nCall arguments received by layer 'gat_conv_14' (type GATConv):\n  • inputs=['tf.Tensor(shape=(4, 1), dtype=float32)', 'tf.Tensor(shape=(8, 2), dtype=int32)']\n  • training=True\n  • mask=None"
+     ]
+    }
+   ],
+   "source": [
+    "# Define model, loss function, and optimizer\n",
+    "node_feature_size = 1\n",
+    "num_edge_classes = 2\n",
+    "model = EdgeClassifier(input_dim=node_feature_size, hidden_dim=32, output_dim=num_edge_classes)\n",
+    "loss_fn = tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True)\n",
+    "optimizer = tf.keras.optimizers.Adam()\n",
+    "\n",
+    "num_epochs = 3\n",
+    "# Training loop (replace with your data loading logic)\n",
+    "\n",
+    "for epoch in range(num_epochs):\n",
+    "  for graph_data in train_data:\n",
+    "    with tf.GradientTape() as tape:\n",
+    "      # Reshape the input tensors to match the expected dimensions of the model\n",
+    "      x = tf.reshape(graph_data['x'], (-1, node_feature_size))\n",
+    "      edge_index = tf.reshape(graph_data['edge_index'], (-1, 2))\n",
+    "      edge_features = tf.reshape(graph_data['edge_features'], (-1, 4))\n",
+    "      y = tf.reshape(graph_data['y'], (-1,))\n",
+    "\n",
+    "      # Pass the reshaped tensors to the model\n",
+    "      predictions = model({'x': x, 'edge_index': edge_index, 'edge_features': edge_features, 'y': y}, True)\n",
+    "      loss = loss_fn(y, predictions)\n",
+    "\n",
+    "    gradients = tape.gradient(loss, model.trainable_variables)\n",
+    "    optimizer.apply_gradients(zip(gradients, model.trainable_variables))\n",
+    "\n",
+    "\n",
+    "# Evaluate on test data (replace with your data)\n",
+    "test_loss, test_acc = model.evaluate(test_data)\n",
+    "print(f\"Test Loss: {test_loss}, Test Accuracy: {test_acc}\")\n"
    ]
   }
  ],
