--- a/GAT-KNN.ipynb
+++ b/GAT-KNN.ipynb
@@ -177,8 +177,7 @@
     "autest['proto'].replace(\"ospf\", 2, inplace = True)\n",
     "\n",
     "autest['service'].replace(\"ssh\", 0, inplace = True)\n",
-    "autest['service'].replace(\"ftp-data\", 1, inplace = True)\n",
-    "autest['service'].replace(\"ftp\", 2, inplace = True)\n",
+    "autest['service'].replace(\"ftp-data\", 1, inplace = True)autest['service'].replace(\"ftp\", 2, inplace = True)\n",
     "autest['service'].replace(\"-\", 3, inplace = True)\n",
     "autest['service'].replace(\"dns\", 4, inplace = True)\n",
     "autest['service'].replace(\"smtp\", 5, inplace = True)\n",
