visualisation fo timeframe graphs

--- a/Phase2.ipynb
+++ b/Phase2.ipynb
@@ -65,7 +65,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sathi\\AppData\\Local\\Temp\\ipykernel_16936\\870708999.py:1: DtypeWarning: Columns (1,3,39,47) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\sathi\\AppData\\Local\\Temp\\ipykernel_20632\\870708999.py:1: DtypeWarning: Columns (1,3,39,47) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(r'D:\\Project Phase II\\Dataset\\completedataset.csv',encoding='cp1252')\n"
      ]
     },
@@ -447,6 +447,79 @@
    "source": [
     "df = pd.read_csv(r'D:\\Project Phase II\\Dataset\\completedataset.csv',encoding='cp1252')\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "proto      Label\n",
+       "3pc        1        137\n",
+       "a/n        1        137\n",
+       "aes-sp3-d  1        137\n",
+       "any        1        411\n",
+       "argus      1        137\n",
+       "                   ... \n",
+       "wsn        1        137\n",
+       "xnet       1        137\n",
+       "xns-idp    1        137\n",
+       "xtp        1        137\n",
+       "zero       1        137\n",
+       "Name: count, Length: 138, dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%capture --no-display\n",
+    "df.groupby('proto')['Label'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "proto      Label\n",
+      "3pc        1        137\n",
+      "a/n        1        137\n",
+      "aes-sp3-d  1        137\n",
+      "any        1        411\n",
+      "argus      1        137\n",
+      "                   ... \n",
+      "wsn        1        137\n",
+      "xnet       1        137\n",
+      "xns-idp    1        137\n",
+      "xtp        1        137\n",
+      "zero       1        137\n",
+      "Name: count, Length: 138, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%capture --no-stdout --no-display\n",
+    "print(df1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#group by service, and counts with label\n",
+    "df1 = df.groupby('proto')['Label'].value_counts()"
    ]
   },
   {
