Reorganising file structure

--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -13,7 +13,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -556,6 +555,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## GAT Model Definition"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "nn.Linear appplies linear transformation to the incoming data: y = x * transpose(A) + b \n"
    ]
   },
@@ -609,12 +615,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "User's train test"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Example usage\n",
     "num_nodes = len(nodes)\n",
     "num_edges = len(train_tuples)\n",
     "num_node_features = 2\n",
@@ -641,6 +653,13 @@
     "\n",
     "# Forward pass\n",
     "edge_scores_test = model(x_test_tensor, edge_index_test_tensor, edge_attr_test_tensor)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Author's train test"
    ]
   },
   {
@@ -751,6 +770,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Train Test using user's dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "# Convert edge_scores tensor to a NumPy array\n",
+    "edge_scores_train_array = edge_scores_train.detach().numpy()\n",
+    "edge_scores_test_array = edge_scores_test.detach().numpy()\n",
+    "# Create a DataFrame from the NumPy array\n",
+    "columns = [str('Dim')+str(i) for i in range(edge_scores_train_array.shape[1])]\n",
+    "edge_scores_train_df = pd.DataFrame(edge_scores_train_array, columns=columns)\n",
+    "edge_scores_test_df = pd.DataFrame(edge_scores_test_array, columns=columns)\n",
+    "trainLabel = train['Label']\n",
+    "testLabel = test['Label']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "X_train = edge_scores_train_df\n",
+    "X_test = edge_scores_test_df\n",
+    "y_train = trainLabel\n",
+    "y_test = testLabel\n",
+    "\n",
+    "# Initialize the KNN classifier\n",
+    "k = 10  # Number of neighbors\n",
+    "knn_classifier = KNeighborsClassifier(n_neighbors=k)\n",
+    "\n",
+    "# Train the classifier\n",
+    "knn_classifier.fit(X_train, y_train)\n",
+    "\n",
+    "# Predictions on the test set\n",
+    "y_pred = knn_classifier.predict(X_test)\n",
+    "\n",
+    "# Calculate accuracy\n",
+    "report = classification_report(y_test, y_pred)\n",
+    "print(\"Classification Report: \\n\", report)\n",
+    "print('AuC Score: ', roc_auc_score(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Attack Sequence Trace Back"
    ]
   },
@@ -772,6 +848,7 @@
    ],
    "source": [
     "#Retrieve index positions of y_pred = 1\n",
+    "#Sample only 16 records for good visualisation\n",
     "indices_of_ones = np.where(y_pred == 1)[0][100:116]\n",
     "\n",
     "import networkx as nx\n",
