--- a/GNN.ipynb
+++ b/GNN.ipynb
@@ -406,6 +406,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## GAT Function Declaration"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "nn.Linear appplies linear transformation to the incoming data: y = x * transpose(A) + b \n"
    ]
   },
@@ -455,7 +462,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Training"
+    "## GAT-Training"
    ]
   },
   {
@@ -484,7 +491,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Testing"
+    "## GAT-Testing"
    ]
   },
   {
@@ -505,7 +512,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Author's training dataset"
+    "## GAT-Author's training dataset"
    ]
   },
   {
@@ -534,7 +541,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Author's testing dataset"
+    "## GAT-Author's testing dataset"
    ]
   },
   {
@@ -555,14 +562,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# KNN"
+    "## Baseline Model: KNN"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## User's train test"
+    "## KNN using User's train test"
    ]
   },
   {
@@ -702,7 +709,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Author's test dataset"
+    "## KNN Training using User prepared dataset and Testing Using Author's test dataset"
    ]
   },
   {
@@ -750,7 +757,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Purely using author's training and testing dataset"
+    "## KNN using author's training and testing dataset"
    ]
   },
   {
@@ -817,7 +824,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lazy Predict Scores"
+    "## Lazy Predict Scores"
    ]
   },
   {
@@ -1486,6 +1493,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## GCN Model Definition"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 47,
    "metadata": {},
@@ -1532,7 +1546,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Training using user prepared dataset"
+    "## GCN-Training using user prepared dataset"
    ]
   },
   {
@@ -1558,7 +1572,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Testing with user prepared dataset"
+    "## GCN-Testing with user prepared dataset"
    ]
   },
   {
@@ -1578,7 +1592,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Training using Author's Train set"
+    "## GCN-Training using Author's Train set"
    ]
   },
   {
@@ -1602,7 +1616,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Testing using Author's Test set"
+    "## GCN-Testing using Author's Test set"
    ]
   },
   {
@@ -1624,14 +1638,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## KNN"
+    "## Baseline Model: KNN"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## User's train-test"
+    "## KNN using User's train-test"
    ]
   },
   {
@@ -1703,7 +1717,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## KNN training using user's dataset and testing using author's test dataset"
+   ]
   },
   {
    "cell_type": "code",
@@ -1750,7 +1766,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Author's train-test Set"
+    "## KNN using Author's train-test Set"
    ]
   },
   {
@@ -1807,15 +1823,15 @@
     "\n",
     "# Train the classifier\n",
     "knn_classifier.fit(auX_train, trainLabel)\n",
-    "# Get training score\n",
-    "training_score = knn_classifier.score(auX_train, trainLabel)\n",
-    "print(\"Training score:\", training_score)\n",
-    "# Predictions on the test set\n",
-    "y_predtrain = knn_classifier.predict(auX_train)\n",
+    "# # Get training score\n",
+    "# training_score = knn_classifier.score(auX_train, trainLabel)\n",
+    "# print(\"Training score:\", training_score)\n",
+    "# # Predictions on the test set\n",
+    "# y_predtrain = knn_classifier.predict(auX_train)\n",
     "\n",
-    "# Calculate accuracy\n",
-    "report = classification_report(trainLabel, y_predtrain)\n",
-    "print(\"Classification Report for Training: \\n\", report)\n",
+    "# # Calculate accuracy\n",
+    "# report = classification_report(trainLabel, y_predtrain)\n",
+    "# print(\"Classification Report for Training: \\n\", report)\n",
     "\n",
     "# Predictions on the test set\n",
     "y_pred = knn_classifier.predict(auX_test)\n",
@@ -2319,6 +2335,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## GraphSAGE Model Declaration"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 120,
    "metadata": {},
@@ -2358,7 +2381,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## User's train-test"
+    "## GraphSAGE- User's train-test"
    ]
   },
   {
@@ -2397,7 +2420,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Author's train-test"
+    "## GraphSAGE-Author's train-test"
    ]
   },
   {
@@ -2423,7 +2446,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Example usage\n",
     "num_nodes_autest = len(autestnodes)\n",
     "num_edges_autest = len(autest_tuples)\n",
     "\n",
@@ -2436,14 +2458,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## KNN"
+    "## Baseline Model: KNN"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## User's train-test"
+    "## KNN using User's train-test"
    ]
   },
   {
@@ -2513,6 +2535,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training using user's dataset but testing using author's test set"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -2557,7 +2586,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Author's train-test"
+    "## KNN Author's train-test"
    ]
   },
   {
