--- a/Data Analysis/Baseline model performance.ipynb
+++ b/Data Analysis/Baseline model performance.ipynb
@@ -679,7 +679,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Train Test with Author's test dataset"
+    "## Train with User's train set and Test with Author's test dataset"
    ]
   },
   {
@@ -1060,7 +1060,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Test purely with author's train-test datasets"
+    "## Train-Test purely with author's train-test datasets"
    ]
   },
   {
