--- a/Data Analysis/LSTM.ipynb
+++ b/Data Analysis/LSTM.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Lib"
+    "# Lib"
    ]
   },
   {
@@ -53,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dataset loading"
+    "# Dataset loading"
    ]
   },
   {
@@ -116,7 +116,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data preprocessing"
+    "# Data preprocessing"
    ]
   },
   {
@@ -342,7 +342,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## LSTM Model"
+    "# LSTM Model"
    ]
   },
   {
@@ -420,7 +420,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load model"
+    "## Load model"
    ]
   },
   {
@@ -810,7 +810,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## GRU"
+    "# GRU"
    ]
   },
   {
@@ -888,7 +888,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Try out baseline models with the same datasets"
+    "# Lazy Predict with the same datasets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lazy Predict for User's train-test set"
    ]
   },
   {
@@ -1360,6 +1367,13 @@
     "    print(\"AUC Scores for each class:\", auc_scores)\n",
     "    print('-----------------------------------------------------------------------------------')\n",
     "    print('-----------------------------------------------------------------------------------')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lazy Predict training using user's train set and testing using author's test set"
    ]
   },
   {
